# GhostCloak

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  cmake_build.bat  cmake_build.ps1
.github/workflows/: cmake-single-platform.yml
include/: AppState.h  AutoClickManager.h  BackgroundManager.h  Commands.h  ConfigManager.h  DragManager.h  GDIPlusHelper.h  UIManager.h  WindowHelper.h
src/: AutoClickManager.cpp  BackgroundManager.cpp  ConfigManager.cpp  DragManager.cpp  GDIPlusHelper.cpp  UIManager.cpp  WindowHelper.cpp  main.cpp
src/res/: app_icon.rc
